<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- See TerriersRvAdapter.kt for bindingings to
         this layout and all its Views -->
    <data>
        <variable
                name="terrier"
                type="com.heske.terriertime.database.Terrier"/>
        <variable
                name="guess"
                type="String"/>
    </data>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- Terrier image -->
            <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/txt_dog_breed"
                    tools:src="@drawable/boston_terrier"
                    app:terrierImageUrl="@{terrier.name}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="visible"
                    android:scaleType="fitStart"
                    android:adjustViewBounds="true"/>
            <TextView
                    android:id="@+id/tv_fun_fact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{terrier.fact}"
                    tools:text="@string/airedale_fact"
                    android:textSize="@dimen/main_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_photo"/>
            <!-- tv_fun_fact -->
            <TextView
                    android:id="@+id/tv_guess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_small"
                    tools:text="@string/txt_guess"
                    android:textSize="@dimen/main_text_size"
                    android:textStyle="bold"
                    android:text="@{terrier.name}"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fun_fact"/>
            <EditText
                    android:id="@+id/et_guess_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:inputType="text"
                    android:hint="@string/txt_guess_hint"
                    android:textSize="@dimen/main_text_size"
                    android:textStyle="bold"
                    android:digits="@string/txt_alphabet"
                    android:text="@{guess}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_guess"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_guess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:text="@string/txt_btn_guess"
                    android:textSize="@dimen/btn_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_guess_txt"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_give_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:text="@string/txt_btn_give_up"
                    android:textSize="@dimen/btn_text_size"
                    app:layout_constraintLeft_toRightOf="@id/btn_guess"
                    app:layout_constraintTop_toBottomOf="@+id/et_guess_txt"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:text="@string/txt_btn_more"
                    android:textSize="@dimen/btn_text_size"
                    app:layout_constraintLeft_toRightOf="@id/btn_give_up"
                    app:layout_constraintTop_toBottomOf="@+id/et_guess_txt"/>
            <!--<FrameLayout-->
                    <!--android:id="@+id/frame_summary"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:layout_constraintLeft_toLeftOf="parent"-->
                    <!--app:layout_constraintTop_toTopOf="parent">-->

                <!--<TextView-->
                        <!--android:id="@+id/tv_fun_fact"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:text="@{terrier.fact}"-->
                        <!--tools:text="@string/airedale_fact"-->
                        <!--android:textSize="@dimen/main_text_size"/>-->
            <!--</FrameLayout>-->






        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>