<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="com.heske.terriertime.detail.DetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/image_terrier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="centerCrop"
                    app:detailImageUrl="@{viewModel.terrier.name}"
                    tools:src="@drawable/terrier_placeholder"/>
            <TextView
                    android:id="@+id/tv_more_pix"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    android:text="@string/txt_more_pix"
                    android:textSize="@dimen/detail_txt_size"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_terrier"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_flickr_pix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_flickr_pix"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:visibility="visible"
                    app:layout_constraintTop_toTopOf="@id/tv_more_pix"
                    app:layout_constraintBottom_toBottomOf="@id/tv_more_pix"
                    app:layout_constraintLeft_toRightOf="@id/tv_more_pix"/>

            <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    tools:text="@string/txt_tools_summary"
                    android:text="@{viewModel.terrier.summary}"
                    android:textSize="@dimen/detail_txt_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_flickr_pix"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>